--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,17 +1,28 @@
 body {
     background-color: #FFE2B0;
+    outline: none;
+    user-select: none;
 }
 
 header {
     text-align: center;
+    margin-bottom: 20px
 }
 
 ul {
     list-style-type: none;
     text-align: center;
+    padding: 0;
 }
 
+li {
+    display: inline;
+    margin-right: 100px;
+}
 
+li:last-child {
+    margin-right: 0;
+}
 
  a {
     color: black;
@@ -20,12 +31,12 @@ ul {
     margin-top: 50px;
 } 
 
-.box-1 {
-    background-color: rebeccapurple;
-    margin-bottom: 100px;
+nav {
+    margin-bottom: 20px; 
 }
 
-.box-2 {
-    background-color: red;
-    margin-top: 40px ;
+.section-about {
+    height: 640px;
+    background-image: url(../img/01-Картинка-фона.jpg);
+    background: url(../img/01-Картинка-фона.jpg) center/cover no-repeat ;
 }
