--- a/src/css/style.css
+++ b/src/css/style.css
@@ -78,6 +78,10 @@ nav {
     margin: 0;
 }
 
+.section-description {
+    margin-bottom: 20px;
+}
+
 .section-description__icon-box {
     text-align: center;
     margin-bottom: 20px;
@@ -133,4 +137,18 @@ img {
     margin: 0 auto;
 } 
 
+.section-map {
+    margin-bottom: 20px;
+}
 
+.section-map__title {
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 36px;
+
+}
+
+iframe {
+    display: block;
+    margin: 0 auto;
+}
