--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,6 +2,29 @@
     box-sizing: border-box;
 }
 
+html {
+    font-family: 'Roboto';
+    font-weight: 400;
+    
+}
+
+@font-face {
+    font-family: 'Philosopher';
+    src: local('Philosopher');
+    src: url(../fonts/Philosopher.ttf);
+}
+
+@font-face {
+    font-family: 'Roboto Bold';
+    src:local(Roboto);
+    src: url('../fonts/Roboto-Bold.eot');
+    src: url('../fonrs/Roboto-Bold.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Roboto-Bold.woff') format('woff'),
+    url('Roboto-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+    }
+
 body {
     background-color: #FFE2B0;
 }
@@ -71,6 +94,7 @@ nav {
     font-size: 36px;
     margin: 0;
     margin-bottom: 9px;
+    font-family: 'Philosopher';
 }
 
 .section-about__text {
@@ -145,10 +169,27 @@ img {
     margin-bottom: 20px;
     text-align: center;
     font-size: 36px;
-
+    font-family: 'Philosopher';
 }
 
 iframe {
     display: block;
     margin: 0 auto;
+}
+
+hr {
+    width: 1024px;
+    border: none;
+    margin: 0 auto;
+    border-top: 1px solid #999999;
+    margin-bottom: 20px;
+}
+
+footer {
+    height: 50px;  
+}
+
+h1 {
+    font-family: 'Roboto!';
+    font-weight: 700;
 }
